# quad-gl

./: Cargo.toml
examples/: basic_shapes.rs  gltf.rs
src/: camera.rs  lib.rs  models.rs  quad_gl.rs  rounded_rect.rs  scene.rs  shapes.rs  sprite_batcher.rs  text.rs  texture.rs  ui.rs
src/ui/render/: painter.rs
